--- a/docs/source/mymap.ipynb
+++ b/docs/source/mymap.ipynb
@@ -68,6 +68,20 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 ('base')",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e2f0acd5598ac634536a546fb4863811f79a72eea91b2e1b6dc414df33b6f8c6"
+   }
   }
  },
  "nbformat": 4,
