new map and methods

--- a/docs/source/mymap.ipynb
+++ b/docs/source/mymap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "16930532",
+   "id": "a8e34fd1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -14,14 +14,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd585481",
+   "id": "6c06917f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "import pandas as pd\n",
+    "import geopandas as gpd\n",
     "import folium\n",
     "import numpy as np\n",
+    "from shapely.geometry import Polygon\n",
+    "from shapely.wkt import loads\n",
     "\n",
     "import requests\n",
     "import json\n",
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f207be9",
+   "id": "1f3d1417",
    "metadata": {},
    "source": [
     "# Pull Data from the native-land.ca API\n",
@@ -42,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a129fab6",
+   "id": "7a6c287d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,10 +91,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19cee1cd",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "f77cdba3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# download and convert to json\n",
@@ -105,22 +106,59 @@
     "territory = {\n",
     "             \"type\": \"FeatureCollection\",\n",
     "             \"features\": response_API\n",
-    "}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7cee896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the file into a format for plotting\n",
     "\n",
-    "print(territory.items()) \n",
-    "print(territory)\n",
+    "#print(list(parse_json)[3].items())\n",
     "\n",
-    "for ii in range(0, len(parse_json)): \n",
-    "  try:\n",
-    "    q = 1\n",
-    "    #print(list(parse_json[ii].values())[2][\"Name\"])\n",
-    "  except:\n",
-    "    pass"
+    "# load the json file in a geopandas dataframe thats easier to work with\n",
+    "gdf = gpd.GeoDataFrame(parse_json)\n",
+    "print(\"The dataframe: \")\n",
+    "#print(type(gdf[\"geometry\"]))\n",
+    "#print(gdf[\"geometry\"].astype(\"string\").iloc[0])\n",
+    "#gdf = gdf[\"geometry\"].apply(loads)\n",
+    "#gdf[\"geometry\"] = gdf[\"geometry\"].astype(\"string\")\n",
+    "gdf = gdf.iloc[0]\n",
+    "print(gdf)\n",
+    "gdf.crs = \"epsg:4326\"\n",
+    "gdf.to_crs = {'init' :'epsg:4326'}\n",
+    "#geom = np.array(list(gdf[\"geometry\"].values()))\n",
+    "#gdf[\"geometry\"] = geom\n",
+    "#print(gdf)\n",
+    "#gdf[\"geometry\"] = list(gdf[\"geometry\"].values())[0])\n",
+    "#gdf[\"geometry\"] = gdf[\"geometry\"].astype(\"string\") #, dtype=\"string\" #list(gdf[\"geometry\"].values())\n",
+    "#print(gdf[\"geometry\"])\n",
+    "#geom = list(gdf[\"geometry\"].values())\n",
+    "#print(\"NEXT\")\n",
+    "#print(np.array(geom[0]))\n",
+    "#print(type(gdf[\"geometry\"]), type(geom[0]), len(geom)) \n",
+    "#gdf2 = gdf.set_geometry(\"geometry\")                                             \n",
+    "#gdf = gdf[\"geometry\"].apply(loads)\n",
+    "\n",
+    "\n",
+    "#print(gdf.columns)\n",
+    "#print(gdf.head())\n",
+    "#poly = Polygon(list(gdf[\"geometry\"]))\n",
+    "#gdf.set_geometry(Polygon(gdf[\"geometry\"]))\n",
+    "\n",
+    "\n",
+    "#gdf = gpd.GeoDataFrame(data).set_geometry('geometry')\n",
+    "\n",
+    "#print(gdf2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1bf324a3",
+   "id": "d656f78a",
    "metadata": {},
    "source": [
     "# Make the Map"
@@ -129,10 +167,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4ff975b",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "d2443cd4",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# initialize a map\n",
@@ -149,55 +185,118 @@
     "                 name=\"Terrain\").add_to(m)\n",
     "\n",
     "# add the native-land overlay\n",
-    "folium.GeoJson(territory,\n",
-    "               name=\"Territories\").add_to(m)\n",
+    "#print(type(folium.Popup(list( parse_json[ii].values() )[2][\"Name\"])))\n",
+    "\n",
+    "# data\n",
+    "folium.GeoJson(gdf,\n",
+    "               name=\"Territories\",\n",
+    "               show=False,\n",
+    "               popup=\"Test\",\n",
+    "               zoom_on_click=True).add_to(m)\n",
+    "\n",
     "\n",
     "# loop through the native-land data and load data by creating polygon and popup\n",
-    "for ii in range(0, len(parse_json)):\n",
-    "    try:\n",
-    "      #folium.GeoJson(data, \n",
-    "      #               name=\"Territories\").add_to(m)\n",
-    "      \n",
-    "      t = folium.GeoJson(parse_json[ii].values())\n",
-    "      t.add_child(folium.Popup(list( parse_json[ii].values() )[2][\"Name\"]))\n",
-    "      t.add_to(m)\n",
-    "    except:\n",
-    "      pass\n",
+    "#for ii in range(0, len(parse_json)):\n",
+    "#    try:\n",
+    "#      #folium.GeoJson(data, \n",
+    "#      #               name=\"Territories\").add_to(m)\n",
+    "#      \n",
+    "#      t = folium.GeoJson(list(parse_json[ii].values()))\n",
+    "#      t.add_child(folium.Popup(list( parse_json[ii].values() )[2][\"Name\"]))\n",
+    "#      t.add_to(m)\n",
+    "#    except:\n",
+    "#      pass\n",
     "\n",
     "# add the layers to toggle\n",
     "folium.LayerControl().add_to(m)\n",
     "\n",
     "# display\n",
-    "m"
+    "m\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee87116",
+   "id": "b916c2d6",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
-    "# Search GitHub's repositories for requests\n",
-    "response = requests.get(\n",
-    "    'https://native-land.ca/wp-json/nativeland/v1/api/index.php',\n",
-    "    params={'q': 'requests+language:python'},\n",
-    ")\n",
+    "# sort out geometry issues\n",
+    "import matplotlib.pyplot as plt\n",
+    "from shapely.geometry import shape, GeometryCollection\n",
     "\n",
-    "# Inspect some attributes of the `requests` repository\n",
-    "json_response = response.json()\n",
-    "print(json_response)\n",
-    "repository = json_response['items'][0]\n",
-    "print(f'Repository name: {repository[\"name\"]}')  # Python 3.6+\n",
-    "print(f'Repository description: {repository[\"description\"]}')  # Python 3.6+"
+    "#with open(data) as f:\n",
+    "#  features = json.load(f)[\"features\"]\n",
+    "num = 1\n",
+    "print(num)\n",
+    "df = pd.DataFrame(parse_json)\n",
+    "df = df.iloc[num]\n",
+    "\n",
+    "#print(df.columns)\n",
+    "#print(df.dtypes)\n",
+    "df[\"geometry\"] = list(df[\"geometry\"].values())[0]\n",
+    "#print(df[\"geometry\"])\n",
+    "#df[\"geometry\"] = list(df[\"geometry\"].values())[0]\n",
+    "#df[\"geometry\"] = df[\"geometry\"].astype(\"float\")\n",
+    "#df.crs = \"epsg:4326\"\n",
+    "#df.to_crs = {'init' :'epsg:4326'}\n",
+    "#print(df.head())\n",
+    "#print(df.dtypes)\n",
+    "\n",
+    "geo: dict = {\"type\": \"Polygon\",\n",
+    "             \"coordinates\": df[\"geometry\"]}\n",
+    "\n",
+    "print(list(geo.values())[1])\n",
+    "polygon: Polygon = shape(geo)\n",
+    "\n",
+    "C = polygon.exterior.coords.xy\n",
+    "\n",
+    "#print(C)\n",
+    "\n",
+    "# initialize a map\n",
+    "m = folium.Map(location=[55, -122], \n",
+    "               zoom_start=4, \n",
+    "               tiles=\"openstreetmap\",\n",
+    "               name=\"Road Map\")\n",
+    "\n",
+    "shapesLayer = folium.FeatureGroup(name=\"Territories\").add_to(m)\n",
+    "\n",
+    "folium.PolyLine(list(geo.values())[1],\n",
+    "                color=\"red\",\n",
+    "                weight=5).add_to(shapesLayer)\n",
+    "\n",
+    "folium.Polygon(list(geo.values())[1],\n",
+    "               color=\"orange\",\n",
+    "               weight=5,\n",
+    "               fill=True,\n",
+    "               fill_color=\"orange\",\n",
+    "               fill_opacity=0.4).add_to(shapesLayer)\n",
+    "\n",
+    "# display the layer switcher widget\n",
+    "folium.LayerControl().add_to(m)\n",
+    "\n",
+    "m\n",
+    "\n",
+    "# save the map object to be displayed on the home page\n",
+    "m.save('canwest_flows.html')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49102a05",
+   "id": "c93cc9d4",
    "metadata": {},
    "outputs": [],
    "source": []
