add better comments to notebook

--- a/docs/source/mymap.ipynb
+++ b/docs/source/mymap.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4e1c4465",
+   "id": "09d1ed01",
    "metadata": {},
    "source": [
-    "Download Data and Make Map\n",
+    "Creating The Map <br>\n",
     "---\n",
-    "# Pull polygons from the native-land.ca API Territory and Name overlays come from Native Land Digital \n",
-    "---\n",
-    "[Native Land Digital](https://native-land.ca/)"
+    "- Downloading Data: <br>\n",
+    "- Pull polygons from the native-land.ca API Territory and Name overlays come from Native Land Digital <br>\n",
+    "# [Native Land Digital](https://native-land.ca/)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25179668",
+   "id": "5cc8e822",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -36,10 +36,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e346c511",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "9e4aa948",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# API URL\n",
@@ -84,20 +82,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4acbf81c",
-   "metadata": {},
-   "source": [
-    "## download and convert to json"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54d21e7d",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "0d2730d5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# download and convert to json\n",
@@ -117,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01df0fa6",
+   "id": "84bf5e28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff76b56",
+   "id": "f722acd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e2fbb9f",
+   "id": "f8bbf4df",
    "metadata": {},
    "outputs": [],
    "source": []
