make notebook nicer

--- a/docs/source/mymap.ipynb
+++ b/docs/source/mymap.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "09d1ed01",
+   "id": "b490a18a",
    "metadata": {},
    "source": [
     "Creating The Map <br>\n",
-    "---\n",
-    "- Downloading Data: <br>\n",
-    "- Pull polygons from the native-land.ca API Territory and Name overlays come from Native Land Digital <br>\n",
-    "# [Native Land Digital](https://native-land.ca/)"
+    "===\n",
+    "> Downloading Data: <br>\n",
+    "> Pull polygons from the native-land.ca API Territory and Name overlays come from Native Land Digital <br>\n",
+    ">  [Native Land Digital](https://native-land.ca/)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc8e822",
+   "id": "0a35be78",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e4aa948",
+   "id": "44481738",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d2730d5",
+   "id": "794a2849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84bf5e28",
+   "id": "1c3e6a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f722acd2",
+   "id": "676e8b8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8bbf4df",
+   "id": "1dafe4a2",
    "metadata": {},
    "outputs": [],
    "source": []
